# baelyks-notification-daemon

./: Cargo.toml  flake.nix
eww/: eww.scss  eww.yuck
src/: dbus.rs  freedesktop.rs  iced.rs  main.rs  markup.rs  measuring_container.rs  notification.rs
