[package]
name = "baelyks-notification-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = { version = "4", default-features = false, features = ["tokio"] }
freedesktop-icons = "0.2.6"
tokio = { version = "1.40.0", features = ["full"] }
chrono = "0.4.38"
serde = "1"
serde_json = "1"
freedesktop-desktop-entry = "0.7.5"
derive_more = { version = "1", features = ["full"] }
image = "0.25"
rand = "0.8"
futures = "0.3"
log = "0.4"
fern = "0.6"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5"
